--- a/style.css
+++ b/style.css
@@ -7,13 +7,20 @@ body {
 }
 
 .main-container {
-    max-width: 80%;
+    max-width: 80%px;
     margin: auto;
     padding: 20px;
     text-align: center;
 }
 
-h1, h2 {
+h1{
+    color: #333;
+    margin: 20px 0;
+    font-size: 50px; /* Fonte maior para títulos em mobile */
+}
+
+
+h2 {
     color: #333;
     margin: 20px 0;
     font-size: 24px; /* Fonte maior para títulos em mobile */
@@ -32,7 +39,7 @@ input[type="text"] {
     width: 80%; /* Largura ajustada para mobile */
     border: 1px solid #ccc;
     border-radius: 4px;
-    font-size: 18px; /* Fonte maior para melhor leitura */
+    font-size: 30px; /* Fonte maior para melhor leitura */
 }
 
 button {
@@ -42,7 +49,7 @@ button {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-size: 18px; /* Fonte maior para melhor leitura */
+    font-size: 30px; /* Fonte maior para melhor leitura */
     width: 50%; /* Largura ajustada para mobile */
 }
 
@@ -55,38 +62,51 @@ table {
     border-collapse: separate;
     border-spacing: 0;
     margin-top: 20px;
-    border-radius: 10px; /* Borda arredondada para a tabela */
-    overflow: hidden; /* Garante que o conteúdo interno não sobreponha as bordas arredondadas */
+    border-radius: 10px;
+    overflow: hidden;
 }
 
 th, td {
     text-align: center;
     padding: 15px;
     border-bottom: 1px solid #ddd;
-    font-size: 18px;
+    font-size: calc(4vw + 4px); /* Ajuste dinâmico do tamanho da fonte com base na largura da tela */
+    max-font-size: 18px; /* Define um tamanho máximo para a fonte */
 }
 
 th {
-    background-color: #4CAF50; /* Cor de fundo para o cabeçalho */
+    background-color: #4CAF50;
     color: white;
-    border-top-left-radius: 10px; /* Arredonda o canto superior esquerdo */
-    border-top-right-radius: 10px; /* Arredonda o canto superior direito */
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 tr:nth-child(odd) {
-    background-color: #f2f2f2; /* Cor de fundo para linhas ímpares */
+    background-color: #f2f2f2;
 }
 
 tr:nth-child(even) {
-    background-color: #ffffff; /* Cor de fundo para linhas pares */
+    background-color: #ffffff;
 }
 
 tr:last-child td:first-child {
-    border-bottom-left-radius: 10px; /* Arredonda o canto inferior esquerdo */
+    border-bottom-left-radius: 10px;
 }
 
 tr:last-child td:last-child {
-    border-bottom-right-radius: 10px; /* Arredonda o canto inferior direito */
+    border-bottom-right-radius: 10px;
+}
+
+@media (min-width: 600px) {
+    th, td {
+        font-size: calc(2vw + 8px); /* Ajuste da fonte para telas maiores, como tablets */
+    }
+}
+
+@media (min-width: 1024px) {
+    th, td {
+        font-size: calc(1vw + 10px); /* Ajuste da fonte para telas ainda maiores, como desktops */
+    }
 }
 
 
